fix mobile book btn shift mobile

--- a/app/components/Navbar/Navbar.module.scss
+++ b/app/components/Navbar/Navbar.module.scss
@@ -9,7 +9,7 @@
 
 
 .navbar-button-container{
-  width: 18.8%;
+  width: 15%;
 
   button{
     background-color: $primary-color;
@@ -33,8 +33,7 @@
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 0 1.4em;
-    // margin-top: 1em;
+    padding: 0 1rem;
 
     .logo{
       width: 300px;
